--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -2,14 +2,40 @@
     background-color: #DDBD77;
 }
 
+
+a{
+    text-decoration: none;
+    color: #7797DD;
+}
+
 .nav {
     height: 100px;
+    display: flex;
 }
 
 .nav ul {
     display: inline;
 }
 
+.nav .logo {
+    height: 100px;
+    width: 100px;
+    line-height: 100px;
+    background-color: grey;
+    float: left;
+}
+
+.links_left_side {
+    font-size: 50px;
+    width: 50%;
+}
+
+.links_right_side {
+    font-size: 50px;
+    width: 50%;
+    padding-right: 2%;
+    text-align: right;
+}
 
 .hero{
     height: 500px;
@@ -24,7 +50,7 @@
 }
 
 .hero .text h1 {
-    font-size: 64px;
+    font-size: 80px;
     text-align: center;
     margin-right: 8px;
     font-family: 'Playfair Display', serif;
